Synchronize the startup module of 1.19.3